# gb_perception

./: CMakeLists.txt  README.md  package.xml
cmake/: Utils.cmake
include/gb_perception/: PeoplePerceptionNode.hpp
include/openpose_detector/: OpenPoseDetector.hpp
launch/: qr_perception.launch
src/: gb_perception_main.cpp  qr_perception.cpp  qr_perception.h
src/gb_perception/: PeoplePerceptionNode.cpp
src/openpose_detector/: OpenPoseDetector.cpp
test/: CMakeLists.txt  openpose_detector_test.cpp
